[gd_scene load_steps=4 format=3 uid="uid://cvx8in7r4d7ml"]

[ext_resource type="Script" path="res://Scripts/System/scrHUD.gd" id="1_mo0wy"]
[ext_resource type="FontFile" uid="uid://4m283seugry" path="res://Graphics/Fonts/NFPixels-Regular.otf" id="2_1aw6v"]
[ext_resource type="Texture2D" uid="uid://dd3vx3fvdxdrh" path="res://Graphics/Sprites/Player/sprPlayerIdle.png" id="3_ncdqv"]

[node name="objHUD" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_mo0wy")

[node name="Display" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="Display"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 116.0
grow_horizontal = 0
theme_override_constants/margin_top = 0

[node name="Panel" type="Panel" parent="Display/MarginContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 5.73

[node name="VBoxContainer" type="VBoxContainer" parent="Display/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 2

[node name="textDebug1" type="Label" parent="Display/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_1aw6v")
theme_override_font_sizes/font_size = 20
text = "Player X"
horizontal_alignment = 2

[node name="textDebug2" type="Label" parent="Display/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1aw6v")
theme_override_font_sizes/font_size = 20
text = "Player Y"
horizontal_alignment = 2

[node name="textDebug3" type="Label" parent="Display/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1aw6v")
theme_override_font_sizes/font_size = 20
text = "FPS"
horizontal_alignment = 2

[node name="textDebug4" type="Label" parent="Display/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1aw6v")
theme_override_font_sizes/font_size = 20
text = "Room Name"
horizontal_alignment = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.392157)
z_index = 100
texture = ExtResource("3_ncdqv")
hframes = 4
